# Proyecto_BD_2025

./: .gitignore  README.md  compose.yml
Back-End/: main.py  pyproject.toml  requirements.in
Back-End/database/: connection.py
Back-End/models/: cliente.py  consumo.py  insumo.py  mantenimiento.py  maquina.py  proveedor.py  tecnico.py  usuario.py
Back-End/routers/: clientes.py  consumos.py  insumos.py  mantenimientos.py  maquinas.py  proveedores.py  tecnicos.py  usuarios.py
Back-End/sql/: init.sql
Front-End/: README.md  bun.lockb  index.html  package-lock.json  tailwind.config.ts
Front-End/src/: App.tsx
Front-End/src/components/: AppSidebar.tsx  DashboardCard.tsx  ProtectedRoute.tsx
Front-End/src/contexts/: AuthContext.tsx
Front-End/src/pages/: Clientes.tsx  Consumos.tsx  Dashboard.tsx  Home.tsx  Insumos.tsx  Login.tsx  Mantenimientos.tsx  Maquinas.tsx  Proveedores.tsx  Register.tsx  Reportes.tsx  Tecnicos.tsx
